--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,13 @@
     <string name="import_result">Imported %1$d entries (%2$d failed). %3$s</string>
     <string name="today_steps_set">Today\'s steps set to %1$d.</string>
 
+    <!-- Preferences Keys -->
+    <string name="key_height" translatable="false">height</string>
+    <string name="key_weight" translatable="false">weight</string>
+    <string name="key_first_day_of_the_week" translatable="false">first_day_of_the_week</string>
+    <string name="key_app_language" translatable="false">language</string>
+    <string name="key_theme_mode" translatable="false">theme_mode</string>
+    <string name="key_theme_style" translatable="false">theme_style</string>
+    <string name="key_date_format" translatable="false">date_format</string>
+    <string name="key_unit_system" translatable="false">unit_system</string>
 </resources>
